--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "node --require ./rn-cli-shim.js ./node_modules/react-native/cli.js start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.82.1",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "@react-native/new-app-screen": "0.82.1",
+    "react-native-image-picker": "^5.0.1",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
@@ -36,6 +38,6 @@
     "typescript": "^5.8.3"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=24"
   }
 }
