--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "express": "^4.21.2",
+    "body-parser": "^1.20.3",
+    "jpeg-js": "^0.4.4"
   },
   "engines": {
     "node": ">=24"
