--- a/ReactNativeFrontend/package.json
+++ b/ReactNativeFrontend/package.json
@@ -22,7 +22,8 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-image-picker": "^5.7.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-vision-camera": "^4.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
