--- a/ReactNativeFrontend/package.json
+++ b/ReactNativeFrontend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/native": "^7.1.22",
+    "@react-navigation/native-stack": "^7.8.1",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-node": "^4.22.0",
     "@tensorflow/tfjs-react-native": "1.0.0",
@@ -22,7 +24,8 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-image-picker": "^5.7.0",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
     "react-native-vision-camera": "^4.7.3"
   },
   "devDependencies": {
