--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.82.1",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^5.7.0",
+    "react-native-immersive": "^2.0.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-tts": "^4.1.1",
